@@ -1,6 +1,8 @@
 History in reverse order
 ----------------------------------------------------
 
+2010-04-14 16:30 bukind
+ bugfix: CsvStore::curMsg invalidated after timeMap.erase(), v1&2 fixed
 2010-04-13 10:40 bukind
  porting performance tester to v2
 2010-04-12 14:45 bukind
